<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test"
    android:backgroundTint="#50000000"
    android:backgroundTintMode="src_over"
    tools:context=".Activities.ResetPasswordActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/whiteTransparent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/gradienteditext"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/reset_password"
            android:textColor="@android:color/white"
            android:onClick="resetPassword"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewLinkRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/back_to_login_link"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:onClick="backToLogin"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/fullscreen_loading"/>

</RelativeLayout>